--- a/snippets/recently-viewed.liquid
+++ b/snippets/recently-viewed.liquid
@@ -25,16 +25,13 @@
     endif
 -%}
 
-<div class="recently__products" id="recently__products">
-    <div class="{% if settings != 'vertical' %}page-width{% endif %}">
-        <h3 class="recently__heading">Recently Products</h3>
-        <ul class="recently__viewed" role="list">
-            <!-- Recently viewed products will appear here -->
-        </ul>
-    </div>
-</div>
+<h2 class="recently__heading">{{ 'products.product.recently' | t }}</h2>
+<ul class="recently__viewed" role="list">
+    <!-- Recently viewed products will appear here -->
+</ul>
 
 <script>
+    
     
     const recentlyViewedProductsKey = 'recentlyViewedProduct'
     {% if product.title != blank %}
@@ -68,9 +65,9 @@
         const oldProductData = localStorage.getItem(recentlyViewedProductsKey);
         const countProductData = getCountOfProducts(oldProductData);
         const sameProduct = isSameProduct(currProductPageTitle, oldProductData);
-        if (countProductData < 4 && !sameProduct) {
+        if (countProductData < 6 && !sameProduct) {
           addNewProduct(productList, oldProductData);
-        } else if (countProductData >= 4 && !sameProduct) {
+        } else if (countProductData >= 6 && !sameProduct) {
           removeOldProductAddNew(productList, oldProductData);
         }
       }
@@ -168,5 +165,6 @@
     document.addEventListener('DOMContentLoaded', function (event) {
         getRecentlyViewedProducts()
     })
+
 
 </script>
